# multi-agent-orchestrator

./: README.md  pyproject.toml  requirements.txt
backend/: requirements.txt
backend/app/: main.py
backend/app/agents/: base.py  manager.py  orchestrator.py
backend/app/api/v1/: deps.py  routes.py
backend/app/core/: config.py  security.py
backend/app/models/: schemas.py
backend/app/services/: llm_client.py  memory.py  retriever.py
backend/app/utils/: logging.py
backend/tests/: test_agents.py  test_routes.py
frontend/: Dockerfile  requirements.txt
frontend/streamlit_app/: app.py  utils.py
frontend/streamlit_app/components/: agent_panel.py  logs_view.py
frontend/streamlit_app/pages/: agent_control.py  dashboard.py
infra/: .env.example  docker-compose.yml
orchestrator-sdk/python/: client.py  orchestrator.py
orchestrator-sdk/tests/: test_client.py
scripts/: run_tests.sh  start_backend.sh  start_frontend.sh
tests/: e2e_test.py
