[tool]
name = "multi-agent-orchestrator"
version = "0.1.0"
description = "A multi-agent orchestration system using FastAPI and Streamlit."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[dependencies]
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
streamlit = "^1.10.0"
pydantic = "^1.9.0"
httpx = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"